# toon-python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP_SERVER_README.md  PR_DESCRIPTION.md  PUBLISHING.md  README.md  examples.py  pyproject.toml  requirements-dev.txt  run_server.py
.devcontainer/: Dockerfile.dev  README.md  devcontainer.json  devcontainer.local.json.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  spec_compliance.yml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: README.md  api.md  features.md  format.md  llm-integration.md
examples/: demo.py
src/toon_format/: __init__.py  _constants.py  _decode_validation.py  _decoders.py  _encode_primitives.py  _encoders.py  _literal_utils.py  _normalize.py  _parser.py  _scanner.py  _string_utils.py  _validation.py  _writer.py  batch.py  cli.py  constants.py  decoder.py  encoder.py  encoders.py  integrations.py  logging_config.py  normalize.py  plugins.py  primitives.py  semantic.py  streaming.py  types.py  utils.py  writer.py
src/toon_format/csv/: __init__.py  parser.py  writer.py
src/toon_format/langchain/: __init__.py  serializer.py
src/toon_format/pydantic/: __init__.py  serializer.py
src/toon_mcp/: __init__.py  server.py
tests/: README.md  conftest.py  fixtures.schema.json  test_api.py  test_cli.py  test_csv.py  test_decoder.py  test_decoder_errors.py  test_decoder_nested.py  test_decoder_primitives.py  test_edge_cases.py  test_encoder.py  test_encoder_complex.py  test_internationalization.py  test_json_integration.py  test_langchain.py  test_langhchain.py  test_normalization.py  test_normalize_functions.py  test_numeric_detection.py  test_parsing_utils.py  test_pydantic.py  test_roundtrip.py  test_scanner.py  test_security.py  test_spec_fixtures.py  test_string_utils.py
tests/fixtures/decode/: arrays-nested.json  arrays-primitive.json  arrays-tabular.json  blank-lines.json  delimiters.json  indentation-errors.json  objects.json  primitives.json  validation-errors.json
tests/fixtures/encode/: arrays-nested.json  arrays-objects.json  arrays-primitive.json  arrays-tabular.json  delimiters.json  normalization.json  objects.json  options.json  primitives.json  whitespace.json
